# skills

./: .gitignore  AGENT.md  CLAUDE.md  README.md  menu-editor-skill.skill  otto-copywriting-v3.1.skill  otto-copywriting-v3.2.skill  otto-copywriting-v3.3.skill  otto-copywriting-v3.skill  otto-copywriting.skill  prompt-improver.skill
.claude/: ACTIVE_CONTEXT.md  CORE_PRINCIPLES.md  DECISIONS.md  mistakes.md
.claude-plugin/: marketplace.json
.gemini/: settings.json
.skills/skills/: analytics-setup  api-design-review  aso-optimization  database-review  debugging  deep-review  development-workflow  expo-workflow  fastapi-workflow  flutter-workflow  frontend-workflow  fullstack-orchestrator  growth-hacking  keyword-research  marketing-orchestrator  offer-creation  openspec-workflow  ottocopy  ottocopy-instagram-content  ottocopy-newsletter  ottocopy-product-copy  ottocopy-web-copy  pricing  product-led-growth  projectsetup  ralph-loop-setup  saas-bootstrap  security-review  seo-optimization  session-context  technical-seo  uvp-optimization  ux-expert-dialogue  ux-optimization  ux-orchestrator  workflow-optimization  writing-clearly-and-concisely
banana/banana-mcp/: package-lock.json  package.json  (+1 more)
deep-review/: deep-review
docs/: our-workflow.md
domain-checker/: SKILL.md  domain-checker.skill  domain_checker.py
expo/: expo-workflow.skill
fastapi/: fastapi-workflow.skill
frontend/: README.md  frontend-workflow.skill
ideogram/ideogram-mcp/: pyproject.toml
ideogram/ideogram-mcp/src/ideogram_mcp/: server.py
luma/luma-mcp/: .env.example  README.md  pyproject.toml
luma/luma-mcp/src/luma_mcp/: server.py
nanobanana/nanobanana-mcp/: pyproject.toml
nanobanana/nanobanana-mcp/src/nanobanana_mcp/: server.py
nette/: INSTALL.md  README.md  nette-framework.skill  nette-workflow.skill
openspec-plugin/: README.md  install.sh
openspec-skill/: INSTALL.md  NAVOD-CZ.md
project-setup/: project-setup.skill
security-review/: SKILL.md
workflow-optimization/: SKILL.md
(+437 files in other folders)
